@@ -1,4 +1,4 @@
-.TH SDPARM "8" "September 2017" "sdparm\-1.11" SDPARM
+.TH SDPARM "8" "October 2017" "sdparm\-1.11" SDPARM
 .SH NAME
 sdparm \- access SCSI modes pages; read VPD pages; send simple SCSI commands.
 .SH SYNOPSIS
